tests/rosetta/transpiler/Rust/file-extension-is-in-extensions-list.error
warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-extension-is-in-extensions-list.rs:63:2
   |
63 | };
   |  ^ help: remove this semicolon
   |
   = note: `#[warn(redundant_semicolons)]` on by default

warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-extension-is-in-extensions-list.rs:74:2
   |
74 | };
   |  ^ help: remove this semicolon

warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-extension-is-in-extensions-list.rs:75:59
   |
75 |         static mut g_extensions: Vec<String> = Vec::new();;
   |                                                           ^ help: remove this semicolon

warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-extension-is-in-extensions-list.rs:93:2
   |
93 | };
   |  ^ help: remove this semicolon

warning: unnecessary trailing semicolon
   --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-extension-is-in-extensions-list.rs:100:2
    |
100 | };
    |  ^ help: remove this semicolon

warning: unnecessary trailing semicolon
   --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-extension-is-in-extensions-list.rs:111:2
    |
111 | };
    |  ^ help: remove this semicolon

warning: unnecessary parentheses around `if` condition
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-extension-is-in-extensions-list.rs:59:8
   |
59 |     if ((s.len() as i64) < (suf.len() as i64)) {
   |        ^                                     ^
   |
   = note: `#[warn(unused_parens)]` on by default
help: remove these parentheses
   |
59 -     if ((s.len() as i64) < (suf.len() as i64)) {
59 +     if (s.len() as i64) < (suf.len() as i64) {
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-extension-is-in-extensions-list.rs:65:24
   |
65 |     let mut idx: i64 = (0 - 1);
   |                        ^     ^
   |
help: remove these parentheses
   |
65 -     let mut idx: i64 = (0 - 1);
65 +     let mut idx: i64 = 0 - 1;
   |

warning: unnecessary parentheses around `while` condition
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-extension-is-in-extensions-list.rs:67:11
   |
67 |     while (i <= ((s.len() as i64) - (sub.len() as i64))) {
   |           ^                                            ^
   |
help: remove these parentheses
   |
67 -     while (i <= ((s.len() as i64) - (sub.len() as i64))) {
67 +     while i <= ((s.len() as i64) - (sub.len() as i64)) {
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-extension-is-in-extensions-list.rs:71:13
   |
71 |         i = (i + 1);
   |             ^     ^
   |
help: remove these parentheses
   |
71 -         i = (i + 1);
71 +         i = i + 1;
   |

warning: unnecessary parentheses around `if` condition
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-extension-is-in-extensions-list.rs:85:8
   |
85 |     if (idx != (0 - 1)) {
   |        ^              ^
   |
help: remove these parentheses
   |
85 -     if (idx != (0 - 1)) {
85 +     if idx != (0 - 1) {
   |

warning: unnecessary parentheses around `if` condition
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-extension-is-in-extensions-list.rs:87:12
   |
87 |         if (t.as_str() != "") {
   |            ^                ^
   |
help: remove these parentheses
   |
87 -         if (t.as_str() != "") {
87 +         if t.as_str() != "" {
   |

warning: unnecessary parentheses around `while` condition
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-extension-is-in-extensions-list.rs:96:11
   |
96 |     while ((t.len() as i64) < w) {
   |           ^                    ^
   |
help: remove these parentheses
   |
96 -     while ((t.len() as i64) < w) {
96 +     while (t.len() as i64) < w {
   |

warning: unnecessary parentheses around assigned value
   --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-extension-is-in-extensions-list.rs:115:32
    |
115 |         let duration_us: i64 = ((_end - _start) / 1000);
    |                                ^                      ^
    |
help: remove these parentheses
    |
115 -         let duration_us: i64 = ((_end - _start) / 1000);
115 +         let duration_us: i64 = (_end - _start) / 1000;
    |

warning: unnecessary parentheses around assigned value
   --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-extension-is-in-extensions-list.rs:116:33
    |
116 |         let memory_bytes: i64 = (_end_mem - _start_mem);
    |                                 ^                     ^
    |
help: remove these parentheses
    |
116 -         let memory_bytes: i64 = (_end_mem - _start_mem);
116 +         let memory_bytes: i64 = _end_mem - _start_mem;
    |

error[E0308]: mismatched types
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-extension-is-in-extensions-list.rs:90:36
   |
90 |         return Ret {f0: false, f1: "<empty>"}
   |                                    ^^^^^^^^^- help: try using a conversion method: `.to_string()`
   |                                    |
   |                                    expected `String`, found `&str`

error[E0308]: mismatched types
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-extension-is-in-extensions-list.rs:92:32
   |
92 |     return Ret {f0: false, f1: "<none>"}
   |                                ^^^^^^^^- help: try using a conversion method: `.to_string()`
   |                                |
   |                                expected `String`, found `&str`

error[E0308]: mismatched types
   --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-extension-is-in-extensions-list.rs:107:27
    |
107 |         let mut ok: i64 = res.f0;
    |                     ---   ^^^^^^ expected `i64`, found `bool`
    |                     |
    |                     expected due to this

warning: variable does not need to be mutable
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-extension-is-in-extensions-list.rs:94:32
   |
94 |         unsafe fn pad(s: &str, mut w: i64) -> String {
   |                                ----^
   |                                |
   |                                help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

error: aborting due to 3 previous errors; 16 warnings emitted

For more information about this error, try `rustc --explain E0308`.
